--- a/css/style.css
+++ b/css/style.css
@@ -1,23 +1,26 @@
 .slide-item.home-01{background-image:url(../img/slide-home/01.jpg)}
 .slide-item.home-02{background-image:url(../img/slide-home/02.jpg)}
 .slide-item.home-03{background-image:url(../img/slide-home/03.jpg)}
-.slide-item.proyecto-01{background-image:url(../img/slide-proyecto/01.jpg)}
+.slide-item.proyecto-00{background-image:url(../img/bg-proyecto-01.jpg)}
+.slide-item.proyecto-01{background-image:url(../img/bg-proyecto-02.jpg)}
 .slide-item.proyecto-02{background-image:url(../img/slide-proyecto/02.jpg)}
 .slide-item.proyecto-03{background-image:url(../img/slide-proyecto/03.jpg)}
 .slide-item.contacto-01{background-image:url(../img/slide-contacto/01.jpg)}
 .slide-item.contacto-02{background-image:url(../img/slide-contacto/02.jpg)}
 .slide-item.interior-01{background-image:url(../img/slide-proyecto/galeria/122/01.jpg)}
-#home .entrada-grande{position:absolute;width:914px;left:50%;margin-left:-457px;bottom:35%;font-size:70px;font-family:'Montserrat-Medium';color:#fff}
-.firt,.second{height:100%;padding:0;margin:0}
-#proyecto .firt{background-color:rgba(23,131,187,1);padding:5% 20px 0 55px;color:#fff}
-#proyecto h3{margin-top:35%;margin-bottom:7%}
-#proyecto p{text-align:left;padding-right:7%}
+#home .entrada-grande{position:absolute;left:7%; top:35%; font-size:30px; font-family:'brandon-grotesque';color:#d4dce4; font-weight: 700; letter-spacing: 50px; line-height: 200%; }
+.zero,.firt,.second{height:100%;padding:0;margin:0}
+#proyecto{padding: 70px 0;}
+#proyecto .firt{padding:5% 20px 0 55px;color:#fff}
+#proyecto .firt h3{color: #adadb2;  font-weight: 700; letter-spacing: 50px;}
+#proyecto h3{margin-top:25%;margin-bottom:7%; margin-left: -20px;}
+#proyecto p{text-align:left;padding-right:7%; color: #5b5b5e; font-weight: 400px; line-height: 200px; letter-spacing: 2px; line-height: 200%; margin-bottom: 30px; }
 #departamentos .depa{height:100%;background-size:cover;background-position:center}
 #departamentos .depa-detalle{width:100%;position:absolute;bottom:0;left:0;height:400px;padding:51px 0 0 55px}
-.depa-detalle .metros{font-size:70px;font-family:'Montserrat-SemiBold';color:#000;height:105px;margin-bottom:20px}
+.depa-detalle .metros{font-size:70px;font-family:'brandon-grotesque';color:#000;height:105px;margin-bottom:20px}
 .depa-detalle .metros span{font-size:25px}
 .depa-detalle p{font-size:1.2em}
-.depa-detalle ul.list{list-style:none;padding:0;text-transform:uppercase;font-weight:lighter;font-family:'Montserrat-SemiBold';letter-spacing:1px}
+.depa-detalle ul.list{list-style:none;padding:0;text-transform:uppercase;font-weight:lighter;font-family:'brandon-grotesque';letter-spacing:1px}
 .depa-detalle .vermas{color:#fff;background-color:#000;font-size:25px;padding:5px 10px;width:45px;height:40px;position:absolute;bottom:0;left:0;cursor:pointer}
 .depa-detalle .vermas.fix{left:55px}
 .depa-detalle .metros .separador{position:absolute;width:10%;border-bottom:4px solid #000;height:4px}
@@ -32,15 +35,21 @@
 #form-cotizador{width:750px;display:block;position:relative;margin:30px auto 0}
 .block-input{width:100%;float:left;height:55px}
 .block-input label{text-align:left;text-transform:uppercase;font-size:15px;width:35%;height:100%;padding:10px 0 0 50px}
-.block-input input[type="text"]{float:right;width:60%;background-color:transparent;color:#fff;border:3px solid #fff;height:40px;font-family:'Montserrat-Medium';font-size:15px;text-transform:uppercase;padding:5px}
-.block-input textarea{float:right;width:60%;background-color:transparent;color:#fff;border:3px solid #fff;height:40px;font-family:'Montserrat-Medium';font-size:15px;text-transform:uppercase;padding:5px}
+.block-input input[type="text"]{float:right;width:60%;background-color:transparent;color:#fff;border:3px solid #fff;height:40px;font-family:'brandon-grotesque';font-size:15px;text-transform:uppercase;padding:5px}
+.block-input textarea{float:right;width:60%;background-color:transparent;color:#fff;border:3px solid #fff;height:40px;font-family:'brandon-grotesque';font-size:15px;text-transform:uppercase;padding:5px}
 .block-input .checkboxs-cotizador{width:60%;float:right;height:100%}
-.block-input .checkboxs-cotizador .check-depa{width:30%;float:left;font-size:14px;font-family:'Montserrat-Medium';text-transform:uppercase;height:100%;padding-top:10px}
-#ubicacion{background-image:url(../img/mapa.jpg);background-size:cover;background-position:bottom right}
+.block-input .checkboxs-cotizador .check-depa{width:30%;float:left;font-size:14px;font-family:'brandon-grotesque';text-transform:uppercase;height:100%;padding-top:10px}
+
+.slide-item.ubicacion-00{background-image:url(../img/bg-direccion-01.jpg)}
+.slide-item.ubicacion-01{background-image:url(../img/mapa.png)}
+
+#ubicacion{padding: 70px 0; border-left: #d4dce4 solid 30px;}
 #ubicacion .firt{padding:5% 20px 0 55px;color:#fff}
 #ubicacion .second{height:100%}
-#ubicacion h3.margin{margin-top:35%;margin-bottom:7%}
+#ubicacion h3{color: #adadb2; letter-spacing: 20px;}
+#ubicacion h3.margin{margin-top:35%;margin-bottom:7%; }
 #ubicacion h3.second-margin{margin-top:15%}
+#ubicacion p{color: #5b5b5e; line-height: 200%; letter-spacing: 5px;}
 #contacto .firt{padding:5% 20px 0 55px;color:#fff}
 #contacto h3{margin-top:15%}
 #contacto p{width:80%;margin:30px 0}
@@ -61,14 +70,14 @@
 .interior{position:fixed;width:100%;height:100%;background-color:#fff;opacity:0;z-index:-1;padding:0 0 0 55px}
 .interior .firt{padding:20px 20px 20px 0}
 .interior .logo-puntaf img{width:140px}
-.interior .metros{font-size:70px;font-family:'Montserrat-SemiBold';color:#000;height:105px;margin-bottom:20px;margin-top:10%}
+.interior .metros{font-size:70px;font-family:'brandon-grotesque';color:#000;height:105px;margin-bottom:20px;margin-top:10%}
 .interior .metros span{font-size:25px}
 .interior .metros .separador{position:absolute;width:10%;border-bottom:4px solid #000;height:4px}
 .interior .box-detalle{width:100%;display:inline-block;margin-bottom:10px}
-.interior .box-detalle .item-detalle{font-family:'Montserrat-Medium';width:50%;float:left;font-size:1em;text-transform:uppercase;height:22px}
+.interior .box-detalle .item-detalle{font-family:'brandon-grotesque';width:50%;float:left;font-size:1em;text-transform:uppercase;height:22px}
 .interior .descripcion{margin-bottom:20%}
-.interior .descripcion h4{font-family:'Montserrat-Bold';font-size:1.2em}
-.interior .descripcion p{font-family:'Montserrat-Medium';font-size:1.2em}
+.interior .descripcion h4{font-family:'brandon-grotesque';font-size:1.2em}
+.interior .descripcion p{font-family:'brandon-grotesque';font-size:1.2em}
 .interior .interior-detalle{width:100%;height:100%;position:absolute;z-index:1;opacity:1}
 .interior .info-depa{position:absolute;width:100%;height:50%;bottom:40px;padding:20px}
 .interior .ficha{position:absolute;top:0;left:0;width:100%;height:100%;opacity:0;z-index:-1}
@@ -76,7 +85,7 @@
 .interior h3{margin-bottom:4%}
 .interior .carac{width:50%;height:100%;float:left}
 .interior .carac ul{padding-top:22px}
-.interior .carac ul li{font-family:'Montserrat-Medium';margin-bottom:10%}
+.interior .carac ul li{font-family:'brandon-grotesque';margin-bottom:10%}
 .carac .item{width:100%;height:70px;margin-bottom:8px;float:left}
 .carac .item p{text-transform:uppercase;margin-top:24px;margin-left:10px;width:100%;padding-left:70px}
 .carac .item .icono{width:70px;height:70px;position:relative;float:left;background-size:contain}
@@ -88,3 +97,43 @@
 .carac .item .ic-06{background-image:url(../img/icons/seguridad.png)}
 .carac .item .ic-07{background-image:url(../img/icons/paseo_peatonal.png)}
 .carac .item .ic-08{background-image:url(../img/icons/club_de_yates.png)}
+
+
+
+
+.btn-primary {
+    color: #5b5b5e !important;
+    background-color: transparent;
+    border-color: #5b5b5e;
+    padding: 20px 0;
+    width: 50%;
+    font-size:12px;
+    letter-spacing: 10px;
+}
+
+.btn-primary:hover {
+    color: #fff !important;
+    background-color: #5b5b5e;
+    border-color: #5b5b5e;
+}
+
+/* nu site */
+
+#home{border-left: #d4dce4 solid 30px; padding: 12% 10% 8%;}
+
+#logo-alcazar{ position: absolute; top: 8%; left: 5%; z-index: 10000; width: 25%;}
+
+footer{background: #d4dce4; color: #fff; min-height: 200px; text-align: center;clear: both; border-top: 40px solid #fff; padding: 40px 0 30px;}
+footer img{margin: 20px 0;}
+footer p{margin: 20px 0;}
+footer a{color: #fff;}
+footer a:hover{text-decoration: none;}
+footer p.redes{font-size: 20px;}
+footer p.redes a{margin: 0 10px;}
+footer p.menu2{font-size: 20px; letter-spacing: 5px; }
+
+footer h1{font-family:'brandon-grotesque'; text-transform: uppercase; letter-spacing: 15px; font-weight: 400; font-size: 24px;}
+
+.redes1{font-size: 20px; position: fixed; bottom: 20px; left: 60px; }
+.redes1 a{color: #d4dce4; margin: 0 10px;}
+.redes1 a:hover{text-decoration: none;}
