--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,4 @@
+body{font-family:'brandon-grotesque';}
 .slide-item.home-01{background-image:url(../img/slide-home/01.jpg)}
 .slide-item.home-02{background-image:url(../img/slide-home/02.jpg)}
 .slide-item.home-03{background-image:url(../img/slide-home/03.jpg)}
@@ -8,37 +9,44 @@
 .slide-item.contacto-01{background-image:url(../img/slide-contacto/01.jpg)}
 .slide-item.contacto-02{background-image:url(../img/slide-contacto/02.jpg)}
 .slide-item.interior-01{background-image:url(../img/slide-proyecto/galeria/122/01.jpg)}
-#home .entrada-grande{position:absolute;left:7%; top:35%; font-size:30px; font-family:'brandon-grotesque';color:#d4dce4; font-weight: 700; letter-spacing: 50px; line-height: 200%; }
+#home .entrada-grande{position:absolute;left:7%; top:35%; font-size:30px; color:#d4dce4; font-weight: 700; letter-spacing: 50px; line-height: 200%; }
 .zero,.firt,.second{height:100%;padding:0;margin:0}
 #proyecto{padding: 70px 0;}
 #proyecto .firt{padding:5% 20px 0 55px;color:#fff}
 #proyecto .firt h3{color: #adadb2;  font-weight: 700; letter-spacing: 50px;}
 #proyecto h3{margin-top:25%;margin-bottom:7%; margin-left: -20px;}
 #proyecto p{text-align:left;padding-right:7%; color: #5b5b5e; font-weight: 400px; line-height: 200px; letter-spacing: 2px; line-height: 200%; margin-bottom: 30px; }
+
+#departamentos{padding: 70px 0; border-left: #d4dce4 solid 30px;}
 #departamentos .depa{height:100%;background-size:cover;background-position:center}
-#departamentos .depa-detalle{width:100%;position:absolute;bottom:0;left:0;height:400px;padding:51px 0 0 55px}
-.depa-detalle .metros{font-size:70px;font-family:'brandon-grotesque';color:#000;height:105px;margin-bottom:20px}
-.depa-detalle .metros span{font-size:25px}
+#departamentos .depa-detalle{text-align: right; margin-top: 40%;}
+.depa-detalle .metros{font-size:70px; color:#d4dce4; height:105px;margin-bottom:20px; position: relative; right: -20%; z-index: 1000;font-weight: bold; text-transform: uppercase; width: 150%;}
+.depa-detalle .metros span{font-size:15px; font-weight: normal; color: #fff; letter-spacing: 5px; position: relative; top: -20px;}
 .depa-detalle p{font-size:1.2em}
-.depa-detalle ul.list{list-style:none;padding:0;text-transform:uppercase;font-weight:lighter;font-family:'brandon-grotesque';letter-spacing:1px}
+.depa-detalle ul.list{list-style:none;padding:0;  letter-spacing:1px; font-weight: normal; }
 .depa-detalle .vermas{color:#fff;background-color:#000;font-size:25px;padding:5px 10px;width:45px;height:40px;position:absolute;bottom:0;left:0;cursor:pointer}
 .depa-detalle .vermas.fix{left:55px}
 .depa-detalle .metros .separador{position:absolute;width:10%;border-bottom:4px solid #000;height:4px}
-#departamentos .depa01{background-image:url(../img/slide-proyecto/proyecto-01.jpg)}
-#departamentos .depa02{background-image:url(../img/slide-proyecto/proyecto-02.jpg)}
-#departamentos .depa03{background-image:url(../img/slide-proyecto/proyecto-03.jpg)}
+#departamentos .depa01{}
+#departamentos .depa02{}
+
 .navegar3d{margin-top:20px}
 .tressesenta{width:100%;height:100%;position:fixed;top:0;left:0;opacity:0;z-index:-1}
 .tressesenta iframe,#iframe360{width:100%;height:100%;position:absolute;top:0;left:0}
 .navegar3D .close-modal{top:30px;right:30px}
-#cotizador{color:#fff;padding-top:20%}
-#form-cotizador{width:750px;display:block;position:relative;margin:30px auto 0}
-.block-input{width:100%;float:left;height:55px}
-.block-input label{text-align:left;text-transform:uppercase;font-size:15px;width:35%;height:100%;padding:10px 0 0 50px}
-.block-input input[type="text"]{float:right;width:60%;background-color:transparent;color:#fff;border:3px solid #fff;height:40px;font-family:'brandon-grotesque';font-size:15px;text-transform:uppercase;padding:5px}
-.block-input textarea{float:right;width:60%;background-color:transparent;color:#fff;border:3px solid #fff;height:40px;font-family:'brandon-grotesque';font-size:15px;text-transform:uppercase;padding:5px}
-.block-input .checkboxs-cotizador{width:60%;float:right;height:100%}
-.block-input .checkboxs-cotizador .check-depa{width:30%;float:left;font-size:14px;font-family:'brandon-grotesque';text-transform:uppercase;height:100%;padding-top:10px}
+
+#cotizador{padding: 70px 0;}
+#cotizador h3{color: #adadb2; letter-spacing: 20px;margin-left: 10%;}
+#form-cotizador{display:block;position:relative;margin:30px auto 0; margin-left: 10%; margin-right: 10%;}
+.block-input{margin-bottom: 20px; clear: both;}
+.block-input label{ text-transform:uppercase; font-size:15px; padding:10px 0 0 30px; font-weight: normal;color: #656565; display: block;  font-weight: 100; }
+.block-input input[type="text"]{background-color:transparent; color:#656565; border:none; border-bottom:1px solid #656565; font-size:15px; text-transform:uppercase; width: 100%; padding: 5px 25px 30px; display: block;}
+.block-input textarea{float:right;width:60%;background-color:transparent;color:#fff;border:3px solid #fff;height:40px;font-size:15px;text-transform:uppercase;padding:5px}
+.block-input .checkboxs-cotizador{}
+.block-input .checkboxs-cotizador .check-depa{width:30%;float:left;font-size:14px;text-transform:uppercase;height:100%;padding-top:10px; margin-left: 30px; }
+.block-input .checkboxs-cotizador .check-depa.bl{border-right: 1px solid #adadb2;}
+#seldeptos{border-bottom:1px solid #656565; padding-bottom: 10px; }
+.slide-item.cotizador-01{background-image:url(../img/plantas.jpg); background-size: contain; background-repeat: no-repeat; background-position: center center;}
 
 .slide-item.ubicacion-00{background-image:url(../img/bg-direccion-01.jpg)}
 .slide-item.ubicacion-01{background-image:url(../img/mapa.png)}
@@ -70,14 +78,14 @@
 .interior{position:fixed;width:100%;height:100%;background-color:#fff;opacity:0;z-index:-1;padding:0 0 0 55px}
 .interior .firt{padding:20px 20px 20px 0}
 .interior .logo-puntaf img{width:140px}
-.interior .metros{font-size:70px;font-family:'brandon-grotesque';color:#000;height:105px;margin-bottom:20px;margin-top:10%}
+.interior .metros{font-size:70px;color:#000;height:105px;margin-bottom:20px;margin-top:10%}
 .interior .metros span{font-size:25px}
 .interior .metros .separador{position:absolute;width:10%;border-bottom:4px solid #000;height:4px}
 .interior .box-detalle{width:100%;display:inline-block;margin-bottom:10px}
-.interior .box-detalle .item-detalle{font-family:'brandon-grotesque';width:50%;float:left;font-size:1em;text-transform:uppercase;height:22px}
+.interior .box-detalle .item-detalle{width:50%;float:left;font-size:1em;text-transform:uppercase;height:22px}
 .interior .descripcion{margin-bottom:20%}
-.interior .descripcion h4{font-family:'brandon-grotesque';font-size:1.2em}
-.interior .descripcion p{font-family:'brandon-grotesque';font-size:1.2em}
+.interior .descripcion h4{font-size:1.2em}
+.interior .descripcion p{font-size:1.2em}
 .interior .interior-detalle{width:100%;height:100%;position:absolute;z-index:1;opacity:1}
 .interior .info-depa{position:absolute;width:100%;height:50%;bottom:40px;padding:20px}
 .interior .ficha{position:absolute;top:0;left:0;width:100%;height:100%;opacity:0;z-index:-1}
@@ -85,7 +93,7 @@
 .interior h3{margin-bottom:4%}
 .interior .carac{width:50%;height:100%;float:left}
 .interior .carac ul{padding-top:22px}
-.interior .carac ul li{font-family:'brandon-grotesque';margin-bottom:10%}
+.interior .carac ul li{margin-bottom:10%}
 .carac .item{width:100%;height:70px;margin-bottom:8px;float:left}
 .carac .item p{text-transform:uppercase;margin-top:24px;margin-left:10px;width:100%;padding-left:70px}
 .carac .item .icono{width:70px;height:70px;position:relative;float:left;background-size:contain}
@@ -120,8 +128,10 @@
 /* nu site */
 
 #home{border-left: #d4dce4 solid 30px; padding: 12% 10% 8%;}
-
 #logo-alcazar{ position: absolute; top: 8%; left: 5%; z-index: 10000; width: 25%;}
+
+#img360{position: absolute;border-top: #d4dce4 solid 1px; bottom: 20%; right: 10%;}
+#img360 a{letter-spacing: 4px; font-size: 12px; text-transform: uppercase; color: #5b5b5e; position: relative; right: -100%;}
 
 footer{background: #d4dce4; color: #fff; min-height: 200px; text-align: center;clear: both; border-top: 40px solid #fff; padding: 40px 0 30px;}
 footer img{margin: 20px 0;}
@@ -132,8 +142,10 @@ footer p.redes{font-size: 20px;}
 footer p.redes a{margin: 0 10px;}
 footer p.menu2{font-size: 20px; letter-spacing: 5px; }
 
-footer h1{font-family:'brandon-grotesque'; text-transform: uppercase; letter-spacing: 15px; font-weight: 400; font-size: 24px;}
+footer h1{ text-transform: uppercase; letter-spacing: 15px; font-weight: 400; font-size: 24px;}
 
 .redes1{font-size: 20px; position: fixed; bottom: 20px; left: 60px; }
 .redes1 a{color: #d4dce4; margin: 0 10px;}
 .redes1 a:hover{text-decoration: none;}
+
+.cienporcien{height: 100%;}
