--- a/css/style.css
+++ b/css/style.css
@@ -3,9 +3,10 @@ body{font-family:'brandon-grotesque';}
 .slide-item.home-02{background-image:url(../img/slide-home/02.jpg)}
 .slide-item.home-03{background-image:url(../img/slide-home/03.jpg)}
 .slide-item.proyecto-00{background-image:url(../img/bg-proyecto-01.jpg)}
-.slide-item.proyecto-01{background-image:url(../img/bg-proyecto-02.jpg)}
-.slide-item.proyecto-02{background-image:url(../img/slide-proyecto/02.jpg)}
-.slide-item.proyecto-03{background-image:url(../img/slide-proyecto/03.jpg)}
+.slide-item.proyecto-01{background-image:url(../img/cam_living.jpg)}
+.slide-item.proyecto-02{background-image:url(../img/cam_living_cocina.jpg)}
+.slide-item.proyecto-03{background-image:url(../img/cam_dorm_princ.jpg)}
+.slide-item.proyecto-04{background-image:url(../img/cam_dorm_sec.jpg)}
 .slide-item.contacto-01{background-image:url(../img/slide-contacto/01.jpg)}
 .slide-item.contacto-02{background-image:url(../img/slide-contacto/02.jpg)}
 .slide-item.interior-01{background-image:url(../img/slide-proyecto/galeria/122/01.jpg)}
@@ -20,15 +21,19 @@ body{font-family:'brandon-grotesque';}
 #departamentos{padding: 70px 0; border-left: #d4dce4 solid 30px;}
 #departamentos .depa{height:100%;background-size:cover;background-position:center}
 #departamentos .depa-detalle{text-align: right; margin-top: 40%;}
-.depa-detalle .metros{font-size:70px; color:#d4dce4; height:105px;margin-bottom:20px; position: relative; right: -20%; z-index: 1000;font-weight: bold; text-transform: uppercase; width: 150%;}
+.depa-detalle .metros{font-size:70px; color:#d4dce4; height:105px;margin-bottom:20px; position: relative; right: -20%; z-index: 8;font-weight: bold; text-transform: uppercase; width: 150%;}
 .depa-detalle .metros span{font-size:15px; font-weight: normal; color: #fff; letter-spacing: 5px; position: relative; top: -20px;}
-.depa-detalle p{font-size:1.2em}
-.depa-detalle ul.list{list-style:none;padding:0;  letter-spacing:1px; font-weight: normal; }
+.depa-detalle p{font-size:1.2em; font-weight: normal; letter-spacing:1px; color: #58585b;}
+.depa-detalle ul.list{list-style:none;padding:0;  letter-spacing:1px; font-weight: normal;     font-size: 1.2em; color: #58585b;}
 .depa-detalle .vermas{color:#fff;background-color:#000;font-size:25px;padding:5px 10px;width:45px;height:40px;position:absolute;bottom:0;left:0;cursor:pointer}
 .depa-detalle .vermas.fix{left:55px}
 .depa-detalle .metros .separador{position:absolute;width:10%;border-bottom:4px solid #000;height:4px}
 #departamentos .depa01{}
 #departamentos .depa02{}
+
+.botonera-depto{position: absolute; bottom: 130px; left: 30px; width: 100%; }
+.botonera-depto .btn-secondary { border: 1px solid rgba(255,255,255,0.5); background: rgba(255,255,255,0.5); color: #000; width: 30%; font-weight: 100; display: inline-block; padding: 10px 0; margin: 0 2% 0 0; font-size: 12px;}
+.botonera-depto .btn-secondary:hover{border: 1px solid #000;} 
 
 .navegar3d{margin-top:20px}
 .tressesenta{width:100%;height:100%;position:fixed;top:0;left:0;opacity:0;z-index:-1}
@@ -72,7 +77,7 @@ body{font-family:'brandon-grotesque';}
 .bg-169{background-color:rgba(246,230,169,1)}
 .bg-197{background-color:rgba(247,222,139,1)}
 .close-modal{position:absolute;font-size:30px;cursor:pointer;right:15px;z-index:1}
-.planta{position:absolute;width:100%;height:100%;background-color:#fff;opacity:0;z-index:-1;padding:0 0 0 55px;left:0}
+.planta{position:fixed;width:100%;height:100%;background-color:#fff;opacity:0;z-index:-1;padding:0 0 0 55px;left:0}
 .planta .pl{height:auto;position:relative;width:840px;margin:0 auto}
 .planta .close-modal{right:25px;top:15px}
 .interior{position:fixed;width:100%;height:100%;background-color:#fff;opacity:0;z-index:-1;padding:0 0 0 55px}
@@ -88,8 +93,22 @@ body{font-family:'brandon-grotesque';}
 .interior .descripcion p{font-size:1.2em}
 .interior .interior-detalle{width:100%;height:100%;position:absolute;z-index:1;opacity:1}
 .interior .info-depa{position:absolute;width:100%;height:50%;bottom:40px;padding:20px}
-.interior .ficha{position:absolute;top:0;left:0;width:100%;height:100%;opacity:0;z-index:-1}
-.interior .ficha .close-modal{position: absolute;font-size: 30px;cursor: pointer;right: 15px;z-index: 1;top: 10px;}
+.ficha{position:fixed;top:0;left:0;width:100%;height:100%;opacity:0;z-index:-1; background: #fff;}
+.ficha .close-modal{position: absolute;font-size: 30px;cursor: pointer;right: 15px;z-index: 1;top: 10px;}
+.ficha .firt{padding:20px 20px 20px 0}
+.ficha .logo-puntaf img{width:140px}
+.ficha .metros{font-size:70px;color:#000;height:105px;margin-bottom:20px;margin-top:10%}
+.ficha .metros span{font-size:25px}
+.ficha .metros .separador{position:absolute;width:10%;border-bottom:4px solid #000;height:4px}
+.ficha .box-detalle{width:100%;display:inline-block;margin-bottom:10px}
+.ficha .box-detalle .item-detalle{width:50%;float:left;font-size:1em;text-transform:uppercase;height:22px}
+.ficha .descripcion{margin-bottom:20%}
+.ficha .descripcion h4{font-size:1.2em}
+.ficha .descripcion p{font-size:1.2em}
+.ficha .interior-detalle{width:100%;height:100%;position:absolute;z-index:1;opacity:1}
+.ficha .info-depa{position:absolute;width:100%;height:50%;bottom:40px;padding:20px}
+
+
 .interior h3{margin-bottom:4%}
 .interior .carac{width:50%;height:100%;float:left}
 .interior .carac ul{padding-top:22px}
@@ -118,7 +137,7 @@ body{font-family:'brandon-grotesque';}
     font-size:12px;
     letter-spacing: 10px;
 }
-
+.btn-primary:focus, .btn-primary:active,
 .btn-primary:hover {
     color: #fff !important;
     background-color: #5b5b5e;
@@ -129,6 +148,8 @@ body{font-family:'brandon-grotesque';}
 
 #home{border-left: #d4dce4 solid 30px; padding: 12% 10% 8%;}
 #logo-alcazar{ position: absolute; top: 8%; left: 5%; z-index: 10000; width: 25%;}
+
+video{width: 100%;}
 
 #img360{position: absolute;border-top: #d4dce4 solid 1px; bottom: 20%; right: 10%;}
 #img360 a{letter-spacing: 4px; font-size: 12px; text-transform: uppercase; color: #5b5b5e; position: relative; right: -100%;}
@@ -149,3 +170,30 @@ footer h1{ text-transform: uppercase; letter-spacing: 15px; font-weight: 400; fo
 .redes1 a:hover{text-decoration: none;}
 
 .cienporcien{height: 100%;}
+.nopad{padding: 0;}
+
+/*
+.homepad1{padding: 5% 0 5% 15%;}
+.homepad2{padding: 5% 15% 5% 0; background: #d4dce4; }
+.homepad1 .slide-item.home-01{background-image:url(../img/web_ilustracion_izquierda.jpg)}
+.homepad2 .slide-item.home-01{background-image:url(../img/web_ilustracion_derecha.jpg)}
+#txt1{position: absolute; top: 13%; left: 8%; width: 57%;}
+#txt2{position: absolute; bottom: 13%; right: 12%; width: 50%;}
+*/
+.homepad1{padding: 7% 0 7% 18%;}
+.homepad2{padding: 7% 18% 7% 0; background: #d4dce4; }
+.homepad1 .slide-item.home-01{background-image:url(../img/web_ilustracion_izquierda.jpg);     background-position: center;}
+.homepad2 .slide-item.home-01{background-image:url(../img/web_ilustracion_derecha.jpg);     background-position: top;}
+#txt1{position: absolute; top: 19%; left: 18%; width: 47%;}
+#txt2{position: absolute; bottom: 18%; right: 22%; width: 40%;}
+
+.homepad1:hover{padding: 6% 0 6% 16%; cursor: pointer;}
+.homepad2:hover{padding: 6% 16% 6% 0;  cursor: pointer; }
+
+.separador{height: 2px; background: #d4dce4; width: 60%; display: block; position: relative; right: -80%; z-index: 10; margin: 50px 0 10px;}
+a.imprimir{text-transform: uppercase; letter-spacing: 5px; color: #58585b;}
+
+.slide-proyecto{ overflow: visible;}
+.owl-carousel, .owl-carousel .owl-stage, .owl-carousel .owl-stage-outer,
+.owl-carousel.owl-drag .owl-item{height: 100%;}
+.owl-carousel.owl-drag .owl-item .slide-item{opacity: 1;}
