--- a/css/media-queries.css
+++ b/css/media-queries.css
@@ -163,32 +163,32 @@
 		font-size: 55px;
 		height: 93px;
 	}
-	.interior .ficha .firt{
+	.ficha .firt{
 		height: 35%;
 	}
-	.interior .ficha .second{
+	.ficha .second{
 		display: block;
 		height: 65%;
 	}
-	.interior .info-depa{
+	.info-depa{
 	    position: relative;
     	bottom: 0px;
     	height: 100%;
     	padding: 10px;
 	}
-	.interior .ficha .metros {
+	.ficha .metros {
 	    margin-top: 0%;
 	    font-size: 50px;
 	    height: 65px;
 	}
-	.interior .ficha .btnd {
+	.ficha .btnd {
 	    height: 100%;
 	    width: 50%;
 	}
-	.interior .ficha h3{
+	.ficha h3{
 		font-size: 1em;
 	}
-	.interior .ficha .close-modal{
+	.ficha .close-modal{
 		top: 45px;
 	}
 	.interior .carac{
@@ -253,6 +253,7 @@
 	.slide-item.home-01{height: 90%; background-image: url(../img/video.gif); background-repeat:  no-repeat;}
 	#home video{height: 100%; margin-left: -140%;}
 	#img360 { bottom: 8%; right: 50%; }
+	#proyecto { padding: 10px 0 30px; }
 	#proyecto .firt{height: 70%;}
 	#proyecto .firt h3{margin-left: 0;letter-spacing: 10px; margin-top: 0;}
 	#proyecto .second{height: 30%;}
@@ -267,10 +268,12 @@
 	.block-input.fixmobile-height { height: auto }
 	#seldeptos{width: 80%;}
 	#cotizador .btn-primary{width: 80%; float: none !important; clear: both;}
+	#ubicacion{padding: 0;}
 	#ubicacion .firt{height: 50%}
 	#ubicacion .second {height: 50%; }
 	#ubicacion h3{letter-spacing: 10px;}
-	
+	.el360{padding: 30% 1% ;}
+	.ico-360 {right: 10px;  top: 20%; }
 }
 
 
